# cpp_project_template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.txt  config.txt
app/: CMakeLists.txt  main.cpp
cmake/: BuildInfo.cmake  ClangTidy.cmake  CmakeDebug.cmake  CodeCoverage.cmake  CodeFormatting.cmake  Colors.cmake  CompilerFlags.cmake  CppCheck.cmake  Dependencies.cmake  Doxygen.cmake  Graphviz.cmake  Installation.cmake  InterproceduralOptimization.cmake  Memcheck.cmake  Packing.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  Testing.cmake  Utils.cmake  buildinfo.h.in
src/: CMakeLists.txt
testsuite/: CMakeLists.txt  test.cpp  test.h
